Added marker management tools. Added visualisation through Rviz Added usage recording for optimisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,7 @@ add_library(${PROJECT_NAME}
   src/ceres_poses.cpp
   src/ceres_rotations.cpp
   src/ceres_flags.cpp
+  src/markers.cpp
   src/BasicOptimisationProblem.cpp
 )
 
